# TP-C

./: CMakeLists.txt
src/: exo1.cppm  exo2.cppm  exo3.cppm  exo4.cppm  exo5.cppm  exo6.cppm  exo7.cppm  exo8.cppm  exo9.cppm  main.cpp
src/exo10/: app.cppm  encoder.cppm  encoderv1.cppm  encoderv2.cppm  encoderv3.cppm  lzw.cppm
tests/: exo1.cpp  exo2.cpp  exo3.cpp  exo4.cpp  exo5.cpp  exo6.cpp  exo8.cpp  exo9.cpp
